--- a/client/style.css
+++ b/client/style.css
@@ -24,7 +24,7 @@ nav {
     max-height: 100%;
 }
 
-/* -------- MAIN CONTENT ------ */
+/* -------- MAIN CONTENT | index.html ------ */
 body {
     background: rgb(43,82,44);
     background: linear-gradient(180deg, rgba(43,82,44,1) 9%, rgba(20,170,19,1) 96%);
@@ -47,7 +47,7 @@ body {
     object-fit: cover;
 }
 
-/* --LOGIN-- */
+/* ------ LOGIN FORM | index.html ------ */
 .login-container {
     background-color: rgb(0, 0, 0, 0.3);
     border-radius: 5%;
@@ -74,6 +74,89 @@ body {
 }
 
 .loginBtn {
+    position: relative;
+    left: 5px;
+    width: 100%;
+    height: 30px;
+    cursor: pointer;
+    background-color: rgb(0, 0, 0, 0.6);
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    border-radius: 7px;
+    font-weight: 600;
+    text-align: center;
+    border: none;
+  }
+
+
+  /* -------- PLANT IMAGE GRID | plants.html ------ */
+
+  .row {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 0 4px;
+  }
+
+  .column {
+      border-radius: 10%;
+      float: left;
+      flex: 25%;
+      max-width: 33.33%;
+      padding: 25px 7px;
+  }
+
+  .column img {
+      border-radius: 35%;
+      margin-top: 8px;
+      padding: 10px 40px;
+      vertical-align: middle;
+      width: 100%;
+  }
+
+
+  @media screen and (max-width: 600px) {
+      .column {
+          flex: 100%;
+          max-width: 100%;
+      }
+  }
+
+  .plant-container {
+    position: relative;
+    text-align: center;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 800;
+    font-size: 20px;
+    color: black;
+  }
+
+  .plant-name {
+    position: absolute;
+    top: 14%;
+    left: 40%;
+  }
+
+  /* ------- NEW PLANT FORM | plants.html -------- */
+
+  .new-plant-container {
+    background-color: rgb(0, 0, 0, 0.3);
+    border-radius: 5%;
+    padding: 15px;
+}
+
+.plantForm {
+    background-color: rgb(255, 255, 255, 0.3);
+    border-radius: 10%;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 40px;
+    left: 50px;
+    width: 80%;
+    height: 100%;
+    padding: 5% 5%;
+    margin: auto;
+}
+
+.plantBtn {
     position: relative;
     left: 5px;
     width: 100%;
