--- a/client/style.css
+++ b/client/style.css
@@ -1,43 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&display=swap");
 
-/* ------- NAV BAR -------
-nav {
-    background-color: rgb(0, 0, 0, 0.33);
-    border-radius: 4%;
-    display: flex;
-    padding: 25px 25px;
-    position: sticky;
-}
-
-.logo-container {
-    border-radius: 50%;
-    cursor: pointer;
-    display: flex;
-    position: sticky;
-    width: 75vw;
-    height: 28vh;
-    z-index: 100;
-}
-
-.logo {
-    max-width: 100%;
-    max-height: 100%;
-} */
-
-/* -------- MAIN CONTENT | index.html ------ */
 body {
   width: 444px;
   height: 964px;
-  top: -19px;
-  left: -10px;
 }
 
 .content {
   position: absolute;
-  width: 444px;
-  height: 964px;
-  left: -8px;
-  top: -258px;
+  width: 390px;
+  height: 649px;
 
   background: linear-gradient(
     180deg,
@@ -59,28 +30,22 @@ body {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   position: absolute;
+  bottom: 20%;
   width: 428px;
   height: 243px;
-  left: 10px;
-  top: 323px;
 }
 
 .btn-container {
-  display: flex;
-  justify-content: space-evenly;
+  position: absolute;
+  bottom: 5%;
+  margin-left: 20px;
 }
 
 .btn-container button {
-  position: absolute;
-  width: 184px;
-  height: 42px;
-  left: 13px;
-  top: 625px;
-
-  background: #ffffff;
   border: 1px solid #ffffff;
   box-sizing: border-box;
   border-radius: 4px;
+  padding: 3px 40px 3px 40px;
 
   font-family: "Montserrat";
   font-style: normal;
@@ -92,45 +57,15 @@ body {
   color: #000;
 }
 
-#login {
-  left: 243px;
-}
-
 #register img {
-  width: 21px;
-  height: 40.06px;
-  top: 625px;
-  left: 15px;
-
-  position: absolute;
-  left: 3.5%;
-  right: 91.59%;
-  top: 67.49%;
-  bottom: 28.18%;
-}
-
-#login img {
-  width: 26.29px;
-  height: 36.95;
-  top: 626px;
-  left: 240px;
-
-  position: absolute;
-  left: 56.07%;
-  right: 37.78%;
-  top: 67.6%;
-  bottom: 28.41%;
+  max-width: 10%;
+  margin-right: 5px;
 }
 
 .logo-container {
   position: absolute;
-  width: 316px;
-  height: 211px;
-  left: 0px;
-  top: 707px;
-
-  background: url(/client/images/hatitat.png);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  width: 390px;
+  bottom: 0px;
 }
 
 /* ------ LOGIN FORM | index.html ------ */
