--- a/client/style.css
+++ b/client/style.css
@@ -5,6 +5,10 @@ body {
     background: linear-gradient(180deg, rgba(20,170,19,1) 15%, rgba(43,82,44,1) 48%);
 }
 
+/* * {
+    box-sizing: border-box;
+} */
+
 /* ---------------------------- LANDING PAGE | index.html --------------------------------- */
 
 
@@ -71,103 +75,6 @@ body {
 
 
 
-
-
-
-  /* ---------------------------- PLANT IMAGE GRID | plants.html -------------------------- */
-
-  .row {
-      display: flex;
-      flex-wrap: wrap;
-      padding: 0 4px;
-  }
-
-  .column {
-      border-radius: 10%;
-      float: left;
-      flex: 25%;
-      max-width: 33.33%;
-      padding: 25px 7px;
-  }
-
-  .column img {
-      border-radius: 35%;
-      margin-top: 8px;
-      padding: 10px 40px;
-      vertical-align: middle;
-      width: 100%;
-  }
-
-
-  @media screen and (max-width: 600px) {
-      .column {
-          flex: 100%;
-          max-width: 100%;
-      }
-  }
-
-  .plant-container {
-    position: relative;
-    text-align: center;
-    font-family: 'Montserrat Alternates', sans-serif;
-    font-weight: 800;
-    font-size: 20px;
-    color: black;
-  }
-
-  .plant-name {
-    position: absolute;
-    top: 14%;
-    left: 40%;
-  }
-
-  /* ------- NEW PLANT FORM | plants.html -------- */
-
-.new-column {
-    background-color: white;
-    border-radius: 35%;
-    margin-top: 8px;
-    padding: 25px;
-    vertical-align: middle;
-    width: 100%;
-    height: 20vh;
-
-}
-
-.new-plant-container {
-    position: relative;
- 
-    text-align: center;
-    font-family: 'Montserrat Alternates', sans-serif;
-    font-weight: 800;
-    font-size: 40px;
-    color: black;
-  }
-
-  .new-plant-name {
-    position: absolute;
-    top: 50%;
-    left: 25%;
-  }
-
-
-.plantBtn {
-    position: relative;
-    left: 5px;
-    bottom: 25%;
-    width: 60%;
-    height: 25%;
-    cursor: pointer;
-    background-color: rgb(0, 0, 0, 0.6);
-    border-radius: 25%;
-    padding-top: 5%;
-  }
-
-  .content {
-    border-radius: 3%;
-    max-width: 750px;
-    margin: auto;
-}
 
 
 
