--- a/client/users/users.css
+++ b/client/users/users.css
@@ -1,6 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;500&display=swap');
 
-body {
-    background: rgb(20,170,19);
-    background: linear-gradient(180deg, rgba(20,170,19,1) 15%, rgba(43,82,44,1) 48%);
+.plant {
+    position: absolute;
+    width: 444px;
+    height: 964px;
+    left: -10px;
+    top: -19px;
+    background: linear-gradient(180deg, #14AA13 0%, rgba(13, 192, 12, 0.831771) 45.53%, rgba(13, 193, 12, 0.826935) 45.54%, rgba(0, 0, 0, 0.75) 100%);
+    border-radius: 28px;
+    display: flex;
+}
+
+.button {
+    
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px; 
+
+    font-family: 'Montserrat Alternates', sans-serif;
 }
