--- a/client/style.css
+++ b/client/style.css
@@ -6,8 +6,10 @@ body {
 }
 
 .content {
+  display: flex;
+  justify-content: center;
   position: absolute;
-  width: 390px;
+  width: 444px;
   height: 649px;
 
   background: linear-gradient(
@@ -38,7 +40,6 @@ body {
 .btn-container {
   position: absolute;
   bottom: 5%;
-  margin-left: 20px;
 }
 
 .btn-container button {
@@ -64,7 +65,7 @@ body {
 
 .logo-container {
   position: absolute;
-  width: 390px;
+  width: 444px;
   bottom: 0px;
 }
 
