--- a/client/style.css
+++ b/client/style.css
@@ -40,266 +40,29 @@ body {
 .btn-container {
   position: absolute;
   bottom: 5%;
+  display: flex;
+  justify-content: ;
 }
 
-.btn-container button {
+.btn-container a {
+  background-color: #ffffff;
   border: 1px solid #ffffff;
   box-sizing: border-box;
   border-radius: 4px;
-  padding: 3px 40px 3px 40px;
+  padding: 5px 30px;
+  text-decoration: none;
+  text-decoration-color: none;
+  color: black;
+  margin: 20px;
 
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
-  line-height: 29px;
-  letter-spacing: -0.32px;
-
-  color: #000;
-}
-
-#register img {
-  max-width: 10%;
-  margin-right: 5px;
 }
 
 .logo-container {
   position: absolute;
   width: 444px;
-  bottom: 0px;
+  top: 600px;
 }
-
-/* ------ LOGIN FORM | index.html ------ */
-.login-container {
-  background-color: rgb(0, 0, 0, 0.3);
-  border-radius: 5%;
-  padding: 15px;
-}
-
-.loginForm {
-  background-color: rgb(255, 255, 255, 0.3);
-  border-radius: 10%;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-size: 40px;
-  left: 50px;
-  width: 80%;
-  height: 100%;
-  padding: 5% 5%;
-  padding-left: 15%;
-}
-
-.loginBtn {
-  position: relative;
-  left: 5px;
-  width: 100%;
-  height: 30px;
-  cursor: pointer;
-  background-color: rgb(0, 0, 0, 0.6);
-  color: rgb(255, 255, 255);
-  font-size: 20px;
-  border-radius: 7px;
-  font-weight: 600;
-  text-align: center;
-  border: none;
-}
-
-/* -------- PLANT IMAGE GRID | plants.html ------ */
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-}
-
-.column {
-  border-radius: 10%;
-  float: left;
-  flex: 25%;
-  max-width: 33.33%;
-  padding: 25px 7px;
-}
-
-.column img {
-  border-radius: 35%;
-  margin-top: 8px;
-  padding: 10px 40px;
-  vertical-align: middle;
-  width: 100%;
-}
-
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
-  }
-}
-
-.plant-container {
-  position: relative;
-  text-align: center;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 800;
-  font-size: 20px;
-  color: black;
-}
-
-.plant-name {
-  position: absolute;
-  top: 14%;
-  left: 40%;
-}
-
-/* ------- NEW PLANT FORM | plants.html -------- */
-
-.new-column {
-  background-color: white;
-  border-radius: 35%;
-  margin-top: 8px;
-  padding: 25px;
-  vertical-align: middle;
-  width: 100%;
-  height: 20vh;
-}
-
-.new-plant-container {
-  position: relative;
-
-  text-align: center;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 800;
-  font-size: 40px;
-  color: black;
-}
-
-.new-plant-name {
-  position: absolute;
-  top: 50%;
-  left: 25%;
-}
-
-.plantBtn {
-  position: relative;
-  left: 5px;
-  bottom: 25%;
-  width: 60%;
-  height: 25%;
-  cursor: pointer;
-  background-color: rgb(0, 0, 0, 0.6);
-  border-radius: 25%;
-  padding-top: 5%;
-}
-/* * {
-    box-sizing: border-box;
-} */
-
-/* ---------------------------- LANDING PAGE | index.html --------------------------------- */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ----------------------------- USERS | register.html & login.html ----------------------- */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ---------------------------- TRACKERS (habits) | trackers.html ------------------------ */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ------ ANIMATION VIDEO --------- */
-/* .jumbotron video {
-    padding-top: 5%;
-    padding-bottom: 5%;
-    position: relative;
-    border-radius: 5%;
-    z-index: 1;
-    height: 25%;
-    width: 100%;
-    object-fit: cover;
-} */
