--- a/client/plants/plant.css
+++ b/client/plants/plant.css
@@ -140,12 +140,83 @@
     padding-left: 15%;
     padding-right: 15%;
 
-    top: 725px;
-    margin-left: 12.75%;
+    top: 700px;
+    margin-left: 9.5%;
     
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px; 
 
     font-family: 'Montserrat Alternates', sans-serif;
+}
+
+
+/* --- ICONS / BUTTONS --- */
+.icons-container {
+    position: absolute;
+    padding-top: 0.3%;
+    padding-bottom: 0.3%;
+    
+
+    height: 7%;
+    width: 400px;
+    
+
+    left: 0px;
+    bottom: 5%;
+    margin-left: 4.5%;
+    
+    background: grey; 
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px; 
+}
+
+/* --- USER PLANT --- */
+.left-button {
+    position: absolute;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 11%;
+    padding-right: 11%;
+    
+    height: 50%;
+    margin-left: 4%;
+    bottom: 30%;
+
+    border-radius: 20px;
+
+}
+
+/* --- HOME / LOGIN --- */
+.middle-button {
+    position: absolute;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 11%;
+    padding-right: 11%;
+    
+    height: 50%;
+    margin-left: 35%;
+    bottom: 30%;
+
+    border-radius: 20px;
+}
+
+/* --- TRACKERS --- */
+.right-button {
+    position: absolute;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 11%;
+    padding-right: 11%;
+    
+    height: 50%;
+    margin-left: 66%;
+    bottom: 30%;
+
+    border-radius: 20px;
+}
+
+.material-icons {
+    font-size: 36px;
 }
