--- a/client/style.css
+++ b/client/style.css
@@ -1,305 +1,66 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Montserrat:wght@300&display=swap');
 
-body {
-  width: 444px;
-  height: 964px;
-}
-
-.content {
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  width: 444px;
-  height: 649px;
-
-  background: linear-gradient(
-    180deg,
-    #14aa13 0%,
-    rgba(13, 192, 12, 0.831771) 45.53%,
-    rgba(13, 193, 12, 0.826935) 45.54%,
-    rgba(0, 0, 0, 0.75) 100%
-  );
-  border-radius: 28px;
-}
-
-.content h1 {
-  color: #ffffff;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 800;
-  line-height: 55px;
-  font-size: 45px;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-  position: absolute;
-  bottom: 20%;
-  width: 428px;
-  height: 243px;
-}
-
-.btn-container {
-  position: absolute;
-  bottom: 5%;
-}
-
-.btn-container button {
-  border: 1px solid #ffffff;
-  box-sizing: border-box;
-  border-radius: 4px;
-  padding: 3px 40px 3px 40px;
-
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 29px;
-  letter-spacing: -0.32px;
-
-  color: #000;
-}
-
-#register img {
-  max-width: 10%;
-  margin-right: 5px;
-}
-
-.logo-container {
-  position: absolute;
-  width: 444px;
-  bottom: 0px;
-}
-
-/* ------ LOGIN FORM | index.html ------ */
-.login-container {
-  background-color: rgb(0, 0, 0, 0.3);
-  border-radius: 5%;
-  padding: 15px;
-}
-
-.loginForm {
-  background-color: rgb(255, 255, 255, 0.3);
-  border-radius: 10%;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-size: 40px;
-  left: 50px;
-  width: 80%;
-  height: 100%;
-  padding: 5% 5%;
-  padding-left: 15%;
-}
-
-.loginBtn {
-  position: relative;
-  left: 5px;
-  width: 100%;
-  height: 30px;
-  cursor: pointer;
-  background-color: rgb(0, 0, 0, 0.6);
-  color: rgb(255, 255, 255);
-  font-size: 20px;
-  border-radius: 7px;
-  font-weight: 600;
-  text-align: center;
-  border: none;
-}
-
-/* -------- PLANT IMAGE GRID | plants.html ------ */
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-}
-
-.column {
-  border-radius: 10%;
-  float: left;
-  flex: 25%;
-  max-width: 33.33%;
-  padding: 25px 7px;
-}
-
-.column img {
-  border-radius: 35%;
-  margin-top: 8px;
-  padding: 10px 40px;
-  vertical-align: middle;
-  width: 100%;
-}
-
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
+html {
+    height: 100%;
   }
-}
-
-.plant-container {
-  position: relative;
-  text-align: center;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 800;
-  font-size: 20px;
-  color: black;
-}
-
-.plant-name {
-  position: absolute;
-  top: 14%;
-  left: 40%;
-}
-
-/* ------- NEW PLANT FORM | plants.html -------- */
-
-.new-column {
-  background-color: white;
-  border-radius: 35%;
-  margin-top: 8px;
-  padding: 25px;
-  vertical-align: middle;
-  width: 100%;
-  height: 20vh;
-}
-
-.new-plant-container {
-  position: relative;
-
-  text-align: center;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 800;
-  font-size: 40px;
-  color: black;
-}
-
-.new-plant-name {
-  position: absolute;
-  top: 50%;
-  left: 25%;
-}
-
-.plantBtn {
-  position: relative;
-  left: 5px;
-  bottom: 25%;
-  width: 60%;
-  height: 25%;
-  cursor: pointer;
-  background-color: rgb(0, 0, 0, 0.6);
-  border-radius: 25%;
-  padding-top: 5%;
-}
-/* * {
-    box-sizing: border-box;
-} */
-
-/* ---------------------------- LANDING PAGE | index.html --------------------------------- */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ----------------------------- USERS | register.html & login.html ----------------------- */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ---------------------------- TRACKERS (habits) | trackers.html ------------------------ */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ------ ANIMATION VIDEO --------- */
-/* .jumbotron video {
-    padding-top: 5%;
-    padding-bottom: 5%;
-    position: relative;
-    border-radius: 5%;
-    z-index: 1;
-    height: 25%;
+  
+  body {
+    min-height: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../client/images/background.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .row h1 {
+    font-size: 3em;
+    font-family: 'Kalam', cursive;
+    color:#FFF;
+  }
+  .row h2{
+    font-size: 1em;
+    font-family: 'Kalam', cursive;
+    color:#FFF;
+   }
+  
+  .btn { 
+    background: #FFFFFF;
+    margin: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px; 
+    font-family: 'Montserrat Alternates', sans-serif;
+  }
+  .btn2 {   
+    background: #131c12;
+    margin: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 5x;
+    padding-bottom: 5px;
+    border-radius: 20px;
+    font-family: 'Montserrat Alternates', sans-serif;
+    color: #FFF !important;
+  }
+  
+  .btn3 {
+    background: #55814c;
+    margin: 10px;
+    border-radius: 20px;
+    font-family: 'Montserrat Alternates', sans-serif;
+    color: #FFF !important;
+  }
+  
+  .box {
+    padding: 150px;
+    vertical-align: center;
+  }
+  .block {
+    display: block;
     width: 100%;
-    object-fit: cover;
-} */
+    border: none;
+    background-color: #04AA6D;
+    color: white;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+  }
