--- a/client/style.css
+++ b/client/style.css
@@ -33,7 +33,7 @@ html {
     margin: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px; 
-    font-family: 'Montserrat Alternates', sans-serif;
+    font-family: 'Montserrat', sans-serif;
   }
   .btn2 {   
     background: #131c12;
@@ -43,7 +43,7 @@ html {
     padding-top: 5x;
     padding-bottom: 5px;
     border-radius: 20px;
-    font-family: 'Montserrat Alternates', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     color: #FFF !important;
   }
   
@@ -51,7 +51,7 @@ html {
     background: #55814c;
     margin: 10px;
     border-radius: 20px;
-    font-family: 'Montserrat Alternates', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     color: #FFF !important;
   }
   
